--- a/index.html
+++ b/index.html
@@ -1,84 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Christiano Lucca - Resume</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      max-width: 700px;
-      margin: 40px auto;
-      padding: 0 20px;
-      color: #222;
-      line-height: 1.5;
-    }
-    h1, h2 {
-      border-bottom: 2px solid #0073b1;
-      padding-bottom: 6px;
-      margin-bottom: 15px;
-    }
-    h1 {
-      font-size: 2.5rem;
-    }
-    a {
-      color: #0073b1;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    section {
-      margin-bottom: 30px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .contact-info {
-      font-size: 1rem;
-      margin-bottom: 30px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Christiano Lucca</h1>
-  <div class="contact-info">
-    <p><a href="https://www.linkedin.com/in/christianolucca/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Christiano Lucca | Resume</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        font-family: 'Inter', sans-serif;
+        background: #f4f7fa;
+        color: #1a1a1a;
+        line-height: 1.6;
+        padding: 2rem;
+      }
+      .container {
+        max-width: 900px;
+        margin: auto;
+        background: #ffffff;
+        padding: 3rem;
+        border-radius: 16px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
+      }
+      header {
+        border-bottom: 2px solid #0073b1;
+        margin-bottom: 2rem;
+        padding-bottom: 1rem;
+      }
+      h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+      }
+      .contact {
+        margin-top: 0.5rem;
+      }
+      .contact a {
+        color: #0073b1;
+        text-decoration: none;
+        margin-right: 1rem;
+      }
+      section {
+        margin-bottom: 2rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+        color: #0073b1;
+        margin-bottom: 1rem;
+      }
+      ul {
+        padding-left: 1.2rem;
+      }
+      li {
+        margin-bottom: 0.5rem;
+      }
+      .job-title {
+        font-weight: 600;
+      }
+      .employer {
+        font-style: italic;
+        color: #555;
+      }
+      .dates {
+        color: #888;
+        font-size: 0.9rem;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>Christiano Lucca</h1>
+        <div class="contact">
+        <a href="mailto:christiano.lucca@clucca.com">christiano.lucca@clucca.com</a>
+        <a href="phone number">+1 786-250-8166</a>  
+        </div>
+      </header>
 
-  <section>
-    <h2>Summary</h2>
-    <p>Experienced professional with expertise in IT infrastructure, backup, disaster recovery, and cloud solutions. Skilled in implementing and supporting enterprise backup and availability solutions to protect business-critical data and ensure business continuity.</p>
-  </section>
+      <section>
+        <h2>Summary</h2>
+        <p>
+         As a Senior Solutions Consultant specializing in cybersecurity and data protection, I help organizations solve complex business challenges through clear, actionable strategies. My approach is simple: understand the risk, align the right technology, and deliver measurable results.
+I work closely with clients to conduct risk assessments, strengthen threat defenses, and ensure business continuity. Whether it’s safeguarding sensitive data, improving incident response capabilities, or optimizing backup and disaster recovery, I deliver practical, results-driven solutions—not just theories.
+My expertise spans endpoint protection, cloud security, encryption, SIEM (Security Information and Event Management), multi-factor authentication (MFA), and data loss prevention (DLP). I’ve helped organizations reduce risk exposure, improve threat intelligence workflows, and achieve compliance with evolving regulatory frameworks—often under high-pressure and time-sensitive conditions.
+Above all, cybersecurity is built on trust—trust in your strategy, systems, and partners. 
+          My role is to ensure that trust is well-placed and that your organization stays resilient against emerging threats.
+With over 25 years of industry experience, I’ve successfully helped clients across finance, healthcare, technology, and other sectors implement robust cybersecurity and data protection strategies tailored to their unique operational needs.
+        </p>
+      </section>
 
-  <section>
-    <h2>Experience</h2>
-    <h3>Senior Systems Engineer at OpenText</h3>
-    <p><em>Dates not specified</em></p>
-    <ul>
-      <li>Specializing in data protection, backup, and disaster recovery solutions for enterprise environments.</li>
-      <li>Conducting proofs of concept and working directly with customers to design and implement solutions.</li>
-      <li>Collaborating with sales and technical teams to deliver tailored availability solutions.</li>
-    </ul>
+      <section>
+        <h2>Experience</h2>
+        <p class="job-title">Senior Solutions Consultant</p>
+        <p class="employer">OpenText</p>
+        <p class="dates">[Since June 2012]</p>
+        <ul>
+          <li>Identify customer needs and align them with OpenText Cybersecurity solutions such as Data Protection, Backup & Disaster Recovery, Archiving, and Threat Detection.</li>
+          <li>Designed high-availability architectures for disaster recovery and failover.</li>
+          <li>Collaborated closely with sales, support, and product teams to ensure customer success.</li>
+          <li>Provide in-depth product knowledge, including architecture, deployment models, and integration options.</li>
+        </ul>
+      </section>
 
-    <h3>Other relevant roles</h3>
-    <p>(Details not publicly listed on LinkedIn)</p>
-  </section>
+      <section>
+        <h2>Skills</h2>
+        <ul>
+          <li>Data Protection & Disaster Recovery</li>
+          <li>Carbonite & OpenText Availability (Powered by Doubletake)</li>
+          <li>Webroot (Endpoint Security & DNS Protection) including Security Awereness Training</li>
+          <li>Advanced Email Threat Protection and Email Continuity & Encryption</li> 
+          <li>CloudAlly (Cloud-to-Cloud Backup)</li>
+          <li>Carbonite Server Backup (Powered by Evault)</li>
+          <li>Public and Private Cloud Integration</li>
+          <li>Customer Proof-of-Concepts (POCs)</li>
+        </ul>
+      </section>
 
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>Data Protection & Backup (Carbonite, OpenText Availability)</li>
-      <li>Disaster Recovery Planning & Failover Strategies</li>
-      <li>Virtualization & Cloud Technologies</li>
-      <li>Customer POCs and Technical Consulting</li>
-      <li>Linux and Windows Environments</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Education</h2>
-    <p>Details not listed publicly</p>
-  </section>
-</body>
+      <section>
+        <h2>Education</h2>
+        <p> Universidade Paulista - Bachelor - 1994-1998 </p>
+      </section>
+    </div>
+  </body>
 </html>
