--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>
          As a Senior Solutions Consultant specializing in cybersecurity and data protection, I help organizations solve complex business challenges through clear, actionable strategies. My approach is simple: understand the risk, align the right technology, and deliver measurable results.
 I work closely with clients to conduct risk assessments, strengthen threat defenses, and ensure business continuity. Whether it’s safeguarding sensitive data, improving incident response capabilities, or optimizing backup and disaster recovery, I deliver practical, results-driven solutions—not just theories.
-My expertise spans endpoint protection, cloud security, encryption, and data loss prevention (DLP). I’ve helped organizations reduce risk exposure, improve threat intelligence workflows, and achieve compliance with evolving regulatory frameworks—often under high-pressure and time-sensitive conditions.
+I’ve helped organizations reduce risk exposure, improve threat intelligence workflows, and achieve compliance with evolving regulatory frameworks—often under high-pressure and time-sensitive conditions.
 Above all, cybersecurity is built on trust—trust in your strategy, systems, and partners. 
           My role is to ensure that trust is well-placed and that your organization stays resilient against emerging threats.
 With over 25 years of industry experience, I’ve successfully helped clients across finance, healthcare, technology, and other sectors implement robust cybersecurity and data protection strategies tailored to their unique operational needs.
